fixed errors mentioned in the pool request again